[gd_scene load_steps=27 format=3 uid="uid://bf4esf57fcnh8"]

[ext_resource type="Texture2D" uid="uid://o3e3kn504do0" path="res://Player/Sprites/PlayerSprite02.png" id="1_btcbx"]
[ext_resource type="Script" uid="uid://dea0ldwa8lkts" path="res://Player/Scripts/Player.gd" id="1_j23h2"]
[ext_resource type="Script" uid="uid://cyrer5xf1hoe8" path="res://Player/Scripts/IdleState.gd" id="2_btcbx"]
[ext_resource type="Texture2D" uid="uid://b2v6h3thvxtdi" path="res://Player/Sprites/AttackSprite01.png" id="2_k53q1"]
[ext_resource type="Texture2D" uid="uid://d1kd7q3k48wwr" path="res://Player/Sprites/Shadow.png" id="3_fhl08"]
[ext_resource type="Script" uid="uid://hdq0d4xkdg1t" path="res://Player/Scripts/WalkState.gd" id="3_gwnis"]
[ext_resource type="Script" uid="uid://b761552yeb8ov" path="res://Player/Scripts/AttackState.gd" id="4_gwnis"]
[ext_resource type="Script" uid="uid://xe7ts6lhkvky" path="res://Player/Scripts/DashState.gd" id="7_vtle1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_edjgo"]

[sub_resource type="Animation" id="Animation_5htga"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 10)]
}

[sub_resource type="Animation" id="Animation_apopc"]
resource_name = "attack_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 10)]
}

[sub_resource type="Animation" id="Animation_gu6f8"]
resource_name = "attack_side"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [8, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 0)]
}

[sub_resource type="Animation" id="Animation_p5o4e"]
resource_name = "attack_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dkpta"]
_data = {
&"RESET": SubResource("Animation_5htga"),
&"attack_down": SubResource("Animation_apopc"),
&"attack_side": SubResource("Animation_gu6f8"),
&"attack_up": SubResource("Animation_p5o4e")
}

[sub_resource type="Animation" id="Animation_4ntmi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_od3ui"]
resource_name = "attack_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [21, 23]
}

[sub_resource type="Animation" id="Animation_x3vf3"]
resource_name = "attack_side"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [27, 29]
}

[sub_resource type="Animation" id="Animation_00tjw"]
resource_name = "attack_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [24, 26]
}

[sub_resource type="Animation" id="Animation_l8h54"]
resource_name = "idle_down"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 2]
}

[sub_resource type="Animation" id="Animation_gwnis"]
resource_name = "idle_side"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6, 8]
}

[sub_resource type="Animation" id="Animation_btcbx"]
resource_name = "idle_up"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3, 5]
}

[sub_resource type="Animation" id="Animation_k53q1"]
resource_name = "walk_down"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [9, 12]
}

[sub_resource type="Animation" id="Animation_fhl08"]
resource_name = "walk_side"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [17, 20]
}

[sub_resource type="Animation" id="Animation_vtle1"]
resource_name = "walk_up"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [13, 16]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_od3ui"]
_data = {
&"RESET": SubResource("Animation_4ntmi"),
&"attack_down": SubResource("Animation_od3ui"),
&"attack_side": SubResource("Animation_x3vf3"),
&"attack_up": SubResource("Animation_00tjw"),
&"idle_down": SubResource("Animation_l8h54"),
&"idle_side": SubResource("Animation_gwnis"),
&"idle_up": SubResource("Animation_btcbx"),
&"walk_down": SubResource("Animation_k53q1"),
&"walk_side": SubResource("Animation_fhl08"),
&"walk_up": SubResource("Animation_vtle1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j23h2"]
size = Vector2(33, 44)

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
motion_mode = 1
wall_min_slide_angle = 0.13962634
script = ExtResource("1_j23h2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_edjgo")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -20)
texture = ExtResource("1_btcbx")
hframes = 16
vframes = 3
frame = 1

[node name="AttackFX" type="Node2D" parent="Sprite2D"]

[node name="AttackEffectsSprite" type="Sprite2D" parent="Sprite2D/AttackFX"]
position = Vector2(0, 10)
texture = ExtResource("2_k53q1")
hframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D/AttackFX/AttackEffectsSprite"]
libraries = {
&"": SubResource("AnimationLibrary_dkpta")
}

[node name="ShadowSprite" type="Sprite2D" parent="Sprite2D"]
modulate = Color(0, 0, 0, 0.78431374)
show_behind_parent = true
position = Vector2(0, 20)
texture = ExtResource("3_fhl08")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_od3ui")
}

[node name="Camera2D" type="Camera2D" parent="."]

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-1.5, -21)
shape = SubResource("RectangleShape2D_j23h2")

[node name="States" type="Node" parent="."]

[node name="IdleState" type="Node" parent="States"]
script = ExtResource("2_btcbx")

[node name="WalkState" type="Node" parent="States"]
script = ExtResource("3_gwnis")

[node name="AttackState" type="Node" parent="States"]
script = ExtResource("4_gwnis")

[node name="DashState" type="Node" parent="States"]
script = ExtResource("7_vtle1")
